<resources>
    <string name="app_name">Password Master</string>
    <string name="app_logo_description">App Logo</string>
    <string name="password_strength_textview">Password Strength:</string>
    <string name="button_submit_text">Submit</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="action_settings">Settings</string>
    <string name="login_title_hint">Title</string>
    <string name="login_image_description">login image</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_website_hint">https://www.website.com/</string>
    <string name="login_other_hint">Comment</string>
    <string name="login_favourite_hint">Favourite</string>
    <string name="button_text_save">Save</string>
    <string name="button_text_cancel">Cancel</string>
    <string name="button_text_delete">Delete</string>
    <string name="button_text_open_in_browser">Open website in browser</string>
    <string name="press_back_again_to_exit">Press Back again to Exit.</string>
    <string name="wrong_password_warning">Wrong password attempt. Remaining attempts:</string>
    <string name="toast_title_copied">Title copied to clipboard.</string>
    <string name="toast_username_copied">Username copied to clipboard.</string>
    <string name="toast_password_copied">Password copied to clipboard.</string>
    <string name="toast_website_copied">Website copied to clipboard.</string>
    <string name="toast_comment_copied">Comment copied to clipboard.</string>
    <string name="delete_login_alert_title">Delete Login</string>
    <string name="delete_login_alert_content">Are you sure you want to delete this login?</string>
    <string name="website_empty_toast_text">Website is empty.</string>
    <string name="image_picker_text">Pick image with:</string>
    <string name="login_favorite_action">set as favourite.</string>
    <string name="login_unfavorite_action">removed from favourites.</string>
    <string name="check_box_text_dark_theme">Use Dark theme?</string>
    <string name="text_view_text_size">Text Size</string>
    <string name="filter_menu_item_text">Filter</string>
    <string name="button_text_change_password">Change Encryption Key</string>
    <string name="edit_text_hint_verify_password">Verify Password</string>
    <string name="edit_text_hint_new_password">New Password</string>
    <string name="toast_timeout_text">A timeout has been initiated because of consecutive false password submission attempts. Remaining seconds:</string>
    <string name="toast_text_empty_password">Oops...Password seems to be empty.</string>
    <string name="password_generator_title">Password Generator</string>
    <string name="button_text_show_advanced_settings_off">Show Generator settings</string>
    <string name="button_text_show_advanced_settings_on">Hide Generator settings</string>
    <string name="generator_use_lowercase">Use Lowercase letters</string>
    <string name="generator_use_uppercase">Use Uppercase letters</string>
    <string name="generator_use_symbols">Use Symbols</string>
    <string name="generator_use_numbers">Use Numbers</string>
    <string name="generator_hint_lowercase">Lowercase letters</string>
    <string name="generator_hint_uppercase">Uppercase letters</string>
    <string name="generator_hint_symbols">Symbols</string>
    <string name="generator_hint_numbers">Numbers</string>
    <string name="generator_hint_password_length">Password Length</string>
    <string name="button_text_generate_password">Generate Password</string>
    <string name="button_text_shuffle_password">Shuffle Password</string>
    <string name="button_text_copy_password">Copy Password</string>
    <string name="toast_text_password_generator_copy">Generated password copied to clipboard.</string>
    <string name="menu_item_restore_generator_defaults">Restore default generator values</string>
    <string name="menu_item_share_logins">Send Encrypted Logins file</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_item_import_logins">Import Logins</string>
    <string name="please_install_file_manager_toast">Please install a File Manager application.</string>
    <string name="permission_failure_toast">You need to give the permission, in order to import Logins.</string>
    <string name="dialog_title_password_request">Enter file password</string>
    <string name="toast_text_import_file_decrypt_attempt">Attempting to decrypt file with password.</string>
    <string name="toast_text_import_logins_password_fail">Unable to decrypt file with this password.</string>
    <string name="toast_text_import_file_input_failure">File could not be read.</string>
    <string name="toast_text_import_failure">Could not import file.</string>
    <string name="menu_item_import_and_delete_logins">Import and replace Logins</string>
    <string name="menu_item_title_reset_image">Reset Image</string>

</resources>
