<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/saveLoginMenuItem"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/button_text_save"
        app:showAsAction="always" />
    <item
        android:id="@+id/cancelLoginMenuItem"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/button_text_cancel"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/resetImageMenuItem"
        android:title="@string/menu_item_title_reset_image" />
    <item
        android:id="@+id/deleteLoginMenuItem"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/button_text_delete"
        app:showAsAction="never" />
</menu>